feat: attendance feature created

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@
 DISCORD_CLIENT_ID=118
 DISCORD_GUILD_ID=115
 DISCORD_TOKEN=MTE4N
+
+DB_USERNAME=database_username
+DB_PASSWORD=database_password
+DB_NAME=database_name
+DB_HOST=localhost
