--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "moment-timezone": "^0.5.43",
     "node-cron": "^3.0.3",
     "pg": "^8.11.3",
