feat: attendance_id env variable added

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ DISCORD_CLIENT_ID=118
 DISCORD_GUILD_ID=115
 DISCORD_TOKEN=MTE4N
 
+ATTENDANCE_CHANNEL_ID=115
+
 DB_USERNAME=database_username
 DB_PASSWORD=database_password
 DB_NAME=database_name
